Fixed Shipping Address Overlap Bug

--- a/styles/style.css
+++ b/styles/style.css
@@ -702,6 +702,12 @@ a, .btn {
 .checkout-address .address-actions {
   padding: 15px 0;
 }
+.address-block {
+  min-height: 91px;
+}
+.checkout-address .btn {
+  margin-bottom: 40px;
+}
 .shippingSpeedModal.modal {
     overflow: hidden;
 }
